--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 # Log file
 *.log
+*.log.*
 
 # BlueJ files
 *.ctxt
@@ -27,3 +28,5 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+target
+alf_data_dev
