--> Added the model and the labels for the properties and aspects

--- a/beecon2017-platform-jar/src/main/resources/alfresco/module/beecon2017-platform-jar/messages/extractor-mapping-model.properties
+++ b/beecon2017-platform-jar/src/main/resources/alfresco/module/beecon2017-platform-jar/messages/extractor-mapping-model.properties
@@ -1,2 +1,6 @@
 # This file should contain extractor mapping model labels
 
+em_extractorMappingModel.aspect.em_type.title=Type
+em_extractorMappingModel.aspect.em_property.title=Property
+em_extractorMappingModel.aspect.em_configuration.title=Configuration
+em_extractorMappingModel.aspect.em_value.title=Value
