--- a/beecon2017-share-jar/pom.xml
+++ b/beecon2017-share-jar/pom.xml
@@ -3,9 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>beecon2017-share-jar</artifactId>
-    <name>Alfresco Share JAR Module</name>
+    <name>Metadata PDF Extractor - Share</name>
     <packaging>jar</packaging>
-    <description>Sample Share JAR Module (to be included in the share.war) - part of AIO - SDK 3</description>
+    <description>Project to extract meta on a text PDF
+    </description>
 
     <parent>
         <groupId>com.mimacom.alfresco</groupId>
