--- a/beecon2017-platform-jar/src/main/resources/alfresco/module/beecon2017-platform-jar/messages/beecon-model.properties
+++ b/beecon2017-platform-jar/src/main/resources/alfresco/module/beecon2017-platform-jar/messages/beecon-model.properties
@@ -1,6 +1,6 @@
 # This file should contain content model labels
 
-em_beeconModel.type.em_document.title=Beecon Document Type
-em_beeconModel.property.em_author.title=Document Author
-em_beeconModel.property.em_city.title=City
-em_beeconModel.property.em_date.title=Date
+be_beeconModel.type.be_document.title=Beecon Document Type
+be_beeconModel.property.be_author.title=Document Author
+be_beeconModel.property.be_city.title=City
+be_beeconModel.property.be_date.title=Date
