--- a/beecon2017-platform-jar/src/log4j.properties
+++ b/beecon2017-platform-jar/src/log4j.properties
@@ -1,5 +1,9 @@
 # Root logger option
-log4j.rootLogger=INFO, file
+log4j.rootLogger=DEBUG, Console, file
+
+logger.com.mimacom.alfresco.*=DEBUG
+log4j.com.mimacom.alfresco.*=DEBUG
+
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
