--- a/src/test/resources/share-hotswap-agent.properties
+++ b/src/test/resources/share-hotswap-agent.properties
@@ -1,7 +1,7 @@
 # Enable hotswap so that changes in this module will be automatically reloaded
 # Watch for changed class files on watchResources path and reload class definition in the running application.
 autoHotswap=true
-#autoHotswap.port=8000
+autoHotswap.port=8000
 
 # Add a directory prior to application classpath (load classes and resources).
 #
