Share properties for beecon properties

--- a/beecon2017-share-jar/src/main/resources/alfresco/web-extension/messages/beecon2017-share-jar.properties
+++ b/beecon2017-share-jar/src/main/resources/alfresco/web-extension/messages/beecon2017-share-jar.properties
@@ -23,3 +23,8 @@ form.field.label.acme.securityClassification=Security Classification
 form.label.advancedsearch.acmeDocument=ACME Documents
 form.description.advancedsearch.acmeDocument=Search for any ACME Documents
 
+type.be_beeconModel=Beecon Document Type
+be_beeconModel.type.be_document.title=Beecon Document Type
+be_beeconModel.property.be_author.title=Document Author
+be_beeconModel.property.be_city.title=City
+be_beeconModel.property.be_date.title=Date
