--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>integration-tests</artifactId>
@@ -10,8 +10,8 @@
 
     <parent>
         <groupId>com.mimacom.alfresco</groupId>
-        <artifactId>beecon2017</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>easyContent2Metadata</artifactId>
+        <version>0.1-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -22,8 +22,8 @@
              that is generated for the AIO project -->
         <dependency>
             <groupId>com.mimacom.alfresco</groupId>
-            <artifactId>beecon2017-platform-jar</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>easyContent2Metadata-platform-jar</artifactId>
+            <version>0.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
 
