Change package name

--- a/easyContent2Metadata-platform-jar/pom.xml
+++ b/easyContent2Metadata-platform-jar/pom.xml
@@ -7,7 +7,7 @@
     <packaging>jar</packaging>
 
     <parent>
-        <groupId>com.mimacom.alfresco</groupId>
+        <groupId>org.alfresco.extension.ec2m</groupId>
         <artifactId>easyContent2Metadata</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
