--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mimacom.alfresco</groupId>
+    <groupId>org.alfresco.extension.ec2m</groupId>
     <artifactId>easyContent2Metadata</artifactId>
     <version>0.1-SNAPSHOT</version>
     <name>Easy Content 2 Metadata</name>
