Corrections according to Werner's comments on the Pullrequest

--- a/easyContent2Metadata-platform-jar/src/log4j.properties
+++ b/easyContent2Metadata-platform-jar/src/log4j.properties
@@ -1,8 +1,8 @@
 # Root logger option
 log4j.rootLogger=DEBUG, Console, file
 
-logger.com.mimacom.alfresco.*=INFO
-log4j.com.mimacom.alfresco.*=INFO
+logger.org.alfresco.extension.e2cm.*=INFO
+log4j.org.alfresco.extension.e2cm.*=INFO
 
 
 # Direct log messages to a log file
