--- a/easyContent2Metadata-platform-jar/src/main/resources/alfresco/module/easyContent2Metadata-platform-jar/messages/easyContent2Metadata-model.properties
+++ b/easyContent2Metadata-platform-jar/src/main/resources/alfresco/module/easyContent2Metadata-platform-jar/messages/easyContent2Metadata-model.properties
@@ -2,3 +2,4 @@ ec2m_easyContent2MetadataDocument.type.ec2m_document.title=Document Type
 ec2m_easyContent2MetadataDocument.property.ec2m_author.title=Document Author
 ec2m_easyContent2MetadataDocument.property.ec2m_city.title=City
 ec2m_easyContent2MetadataDocument.property.ec2m_date.title=Date
+form.datalist.active.message=Should the field be extracted?
