Every time a feature branch is created it will have it's own sonar project so we can correct issues ASAP

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ install: true
 addons:
   sonarqube:
     organization: "sgirardin-github"
+    branches:
+          - master
+          - feature/*
 jdk:
   - oraclejdk8
 script:
