First commit for Dropdown lists with Document Models.

--- a/easyContent2Metadata-platform-jar/src/log4j.properties
+++ b/easyContent2Metadata-platform-jar/src/log4j.properties
@@ -1,8 +1,9 @@
 # Root logger option
 log4j.rootLogger=DEBUG, Console, file
 
-logger.org.alfresco.extension.e2cm.*=INFO
-log4j.org.alfresco.extension.e2cm.*=INFO
+logger.org.alfresco.extension.e2cm.*=ALL
+log4j.org.alfresco.extension.e2cm.*=ALL
+log4j*=INFO
 
 
 # Direct log messages to a log file
