Migrating to SDK 4.0 and Alfresco 6

--- a/easyContent2Metadata-platform-docker/src/main/docker/dev-log4j.properties
+++ b/easyContent2Metadata-platform-docker/src/main/docker/dev-log4j.properties
@@ -260,8 +260,8 @@ log4j.logger.org.alfresco.enterprise.repo.authorization.AuthorizationsConsistenc
 #-----------------------------------------------------------------------
 # Platform module logging
 #-----------------------------------------------------------------------
-log4j.logger.com.mimacom.alfresco.platformsample.DemoComponent=debug
-log4j.logger.com.mimacom.alfresco.platformsample.HelloWorldWebScript=debug
+log4j.logger.org.alfresco.extension.ec2m.platformsample.DemoComponent=debug
+log4j.logger.org.alfresco.extension.ec2m.platformsample.HelloWorldWebScript=debug
 
 
 
