--- a/easyContent2Metadata-platform-docker/src/main/docker/hotswap-agent.properties
+++ b/easyContent2Metadata-platform-docker/src/main/docker/hotswap-agent.properties
@@ -1,7 +1,7 @@
 # Enable hotswap so that changes in this module will be automatically reloaded
 # Watch for changed class files on watchResources path and reload class definition in the running application.
 autoHotswap=true
-autoHotswap.port=8000
+#autoHotswap.port=8000
 
 # Add a directory prior to application classpath (load classes and resources).
 #
@@ -10,8 +10,8 @@ autoHotswap.port=8000
 # classes from built JAR file.
 # i.e. monitor /target/classes
 # should work with extraClasspath=${project.build.outputDirectory}
-# If not try 
-extraClasspath=${project.basedir}/easyContent2Metadata-platform-jar/target/classes;${project.basedir}/easyContent2Metadata-platform-jar/target/test-classes;${project.basedir}/integration-tests/target/classes;${project.basedir}/integration-tests/target/test-classes
+# If not try
+extraClasspath=/usr/local/tomcat/hotswap-agent
 
 # Comma separated list of disabled plugins
 # Use plugin name - e.g.    
@@ -23,12 +23,12 @@ disabledPlugins=Hibernate,Spring
 #
 # Load web application resources (such as HTML, JSP, CSS, ...) from this directory prior to default processing.
 # Use this setting to set to serve resources from source directory directly (e.g. src/main/webapp).
-extraWebappContext=${project.basedir}/easyContent2Metadata-platform-jar/target/classes/META-INF/resources;
+extraWebappContext=/usr/local/tomcat/hotswap-agent/easyContent2Metadata-platform-jar/target/classes/META-INF/resources;
 
 # Load static web resources from different directory.
 #
 # This setting is dependent on application server plugin(Jetty, Tomcat, JBoss, ...)
-webappDir=${project.basedir}/easyContent2Metadata-platform-jar/target/classes/META-INF/resources;
+webappDir=/usr/local/tomcat/hotswap-agent/easyContent2Metadata-platform-jar/target/classes/META-INF/resources;
 
 # Watch for changes in a directory (resources only).
 #
