--- a/easyContent2Metadata-share-docker/src/main/docker/log4j.properties
+++ b/easyContent2Metadata-share-docker/src/main/docker/log4j.properties
@@ -1,7 +1,7 @@
 # Set root logger level to error
 log4j.rootLogger=error, Console, File
 
-###### Console appender definition #######
+# Console appender definition #
 
 # All outputs currently set to be a ConsoleAppender.
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
@@ -11,7 +11,7 @@ log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%d{ISO8601} %x %-5p [%c{3}] [%t] %m%n
 #log4j.appender.Console.layout.ConversionPattern=%d{ABSOLUTE} %-5p [%c] %m%n
 
-###### File appender definition #######
+# File appender definition #
 log4j.appender.File=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.File.File=share.log
 log4j.appender.File.Append=true
