--- a/easyContent2Metadata-share-jar/pom.xml
+++ b/easyContent2Metadata-share-jar/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>easyContent2Metadata-share-jar</artifactId>
-    <name>Easy Contetnt 2 Metadata Extractor - Share</name>
+    <name>Alfresco Share JAR Module</name>
     <packaging>jar</packaging>
-    <description>Alfresco extension to help easily extract metadata from content</description>
+    <description>Sample Share JAR Module (to be included in the share.war) - part of AIO - SDK 4.0</description>
 
     <parent>
         <groupId>org.alfresco.extension.ec2m</groupId>
@@ -25,11 +25,7 @@
             <artifactId>share</artifactId>
             <classifier>classes</classifier>
         </dependency>
-
-        <dependency>
-            <groupId>org.alfresco.surf</groupId>
-            <artifactId>spring-surf-api</artifactId>
-        </dependency>
+        <!-- Add here any JAR or AMP dependency that needs to be deployed to share -->
     </dependencies>
 
     <build>
